<resources>
    <string name="app_name">Madrasi Masala</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="pay">Pay</string>
    <string name="order_for">Order for</string>
    <string name="total">Total: </string>
    <string name="empty_phone_number_error">Phone Number cannot be empty</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_id">Order Id:</string>
    <string name="inr_price">₹ %s</string>
    <string name="amount_paid">Amount Paid:</string>
</resources>
