<?xml version="1.0" encoding="utf-8"?>
<com.chetdeva.madrasi.root.order.thankyou.ThankYouView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:padding="16dp"
            android:text="@string/thank_you" />

        <TextView
            android:id="@+id/phone_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="16dp"
                android:text="@string/amount_paid" />

            <TextView
                android:id="@+id/order_total_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="16dp"
                android:text="@string/order_id" />

            <TextView
                android:id="@+id/order_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order_again_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:text="Order Again" />

</com.chetdeva.madrasi.root.order.thankyou.ThankYouView>
